kube/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: provisioner
  labels:
    app: provisioner
spec:
  type: NodePort
  ports:
    - nodePort: 32223
      port: 80
      name: php-8000
    - port: 9000
      name: php-9000
    - port: 3306
      name: mysql
  selector:
    app: provisioner
